--- a/main/src/main/res/values/strings.xml
+++ b/main/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="included">Что включено</string>
     <string name="not_included">Что не включено</string>
     <string name="select_room">К выбору номера</string>
+    <string name="more_details">Подробнее о номере</string>
+    <string name="choose_room">Выбрать номер</string>
 </resources>
